# FOSS-Deck

./: .gitignore  README.md
docs/: Gebauer-FOSS-Deck.pptx
mobile/: package-lock.json  package.json
mobile/android-overrides/app/src/main/: AndroidManifest.xml
mobile/android-overrides/app/src/main/res/xml/: network_security_config.xml
mobile/src/: index.html  main.js  styles.css
mobile/src-tauri/: Cargo.toml  tauri.conf.json
mobile/src-tauri/src/: lib.rs
mobile/src/js/: actions.js  dom.js  lists.js  reorder.js  state.js  storage.js  tauri.js  tiles.js  ui.js  ws.js
pc-server/: Cargo.toml
pc-server/src/: audio.rs  discovery.rs  gui.rs  main.rs  media.rs  server.rs  system.rs
pc-server/src/server/: auth_store.rs  commands.rs  mod.rs  pairing.rs  rate_limit.rs  ws.rs
