[package]
name = "FOSS-Deck"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
warp = "0.3"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4.29"
env_logger = "0.11"
eframe = { version = "0.33.3", default-features = true }
whoami = "1.6.1"
tokio-util = "0.7.17"


# Windows APIs for system volume control (Windows-only)
[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
]
